crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_idle_hero_with_brief.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │  Brief — 2026-05-19                                                 ┌ Today ───────────────────┐
  │  Today                                                              │Brief                     │
  │  Today's calendar                                                   │(no brief yet — run /day t│
  │  • 09:00 standup                                                    │                          │
  │  Carried-over todos                                                 │                          │
  │  (no todos rolled over from yesterday)                              │                          │
  │                                                                     │                          │
  │  This week                                                          │                          │
  │  Priorities                                                         │                          │
  │  • [x] Ship I-0035 Phase 2                                          │                          │
 ▸│                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ no workstream Ready
