crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_input_generating.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │⠋ thinking...                                                        ┌ Today ───────────────────┐
  │                                                                     │Brief                     │
  │                                                                     │(no brief yet — run /day t│
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Generating...
 no model │ no workstream ⠋ Thinking...
