crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_layout_narrow_fallback.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │
  │
  │
  │
  │
  │
  │                               ╭─────────────╮
  │                               │    arawn    │
  │                               ╰─────────────╯
  │
 ▸│                 Welcome — your personal agentic assistant.
  │           I watch, check, summarize, and nudge across your tools.
  │
  │                 Type / for commands · Tab to toggle sidebar
  │                        /connect <service> · ↑ recall
  │
  │
  │
  │
  │
  │
────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ ✎ scratch Ready
