crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_layout_three_pane.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                                         ┌ Today ───────────────────┐
  │                                                                                         │Brief                     │
  │                                                                                         │(no brief yet — run /day t│
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                     ╭─────────────╮                                     │                          │
  │                                     │    arawn    │                                     │                          │
  │                                     ╰─────────────╯                                     │                          │
  │                                                                                         │                          │
 ▸│                       Welcome — your personal agentic assistant.                        │                          │
  │                 I watch, check, summarize, and nudge across your tools.                 │                          │
  │                                                                                         │                          │
  │                       Type / for commands · Tab to toggle sidebar                       │Action items              │
  │                              /connect <service> · ↑ recall                              │(no action items)         │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
