crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_sidebar_with_lenses.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
┌ Lenses ──────────┐                                                    ┌ Today ───────────────────┐
│▸ scratch         │                                                    │Brief                     │
│  home            │                                                    │(no brief yet — try /brief│
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │Action items              │
│                  │                                                    │(no action items)         │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
└──────────────────┘                                                    └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ 00000000 Ready
