crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_sidebar_with_workstreams.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
┌ Workstreams ─────┐                                                    ┌ Today ───────────────────┐
│▸ scratch         │                                                    │Brief                     │
│  home            │                                                    │(no brief yet — run /day t│
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │Action items              │
│                  │                                                    │(no action items)         │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
└──────────────────┘                                                    └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ scratch │ 00000000 Ready
