crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_streaming_response.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │❯ List the crates                                                    ┌ Today ───────────────────┐
  │                                                                     │Brief                     │
  ││ Here are the crates in this▌                                       │(no brief yet — run /day t│
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Generating...
 no model │ no lens ⠋ Thinking...
